# SDL2_Tetris

./: .gitignore  CMakeLists.txt  Improvements.txt  README.md  apilado.cpp  apilado.h  constantes.h  game.cpp  game.h  game_close.cpp  game_close.h  game_init.cpp  game_init.h  main.cpp  main.h  pieza.cpp  pieza.h  tablero.cpp  tablero.h  texto.cpp  texto.h
